--- a/hjh.html
+++ b/hjh.html
@@ -1,4 +1,8 @@
-<html>
-  <p> Моё любимое изображение из интернета </p>
-  <img src = "/uploads/2023/03/Cat.jpg">
+<!DOCTYPE html>
+<html lang="en">
+  
+  <head></head>
+  <body>
+    <p>cefw</p>
+  </body>
 </html>
